UI fix date-picker height and aggregate-metrices gap

--- a/app/styles/app/layouts/spotlight/aggregate-matrices.scss
+++ b/app/styles/app/layouts/spotlight/aggregate-matrices.scss
@@ -4,7 +4,7 @@ $brownish-grey: #666666;
 .flex-container {
   display: flex;
   margin: 1rem 0rem 1rem 1rem;
-  column-gap: 200px;
+  column-gap: 30%;
   justify-content: flex-start;
   font-family: Roboto;
 }
